# glslSandbox-raylib

./: .gitignore  CMakeLists.txt  main.c  syncRPI.sh
resources/shaders/glsl100/: julia_set.fs  myshader.glsl  reload.fs
